--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-
 {
-  "name": "student-portal",
+  "name": "seff-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,22 +8,20 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
-    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
-    "date-fns": "^2.30.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.9.0",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.1",
-    "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
